# claudometer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yml
extras/: caps-led.ps1
src/: alerts.rs  api.rs  codex.rs  gfx.rs  main.rs  trayicon.rs  updater.rs  util.rs
