[package]
name = "claudometer"
version = "0.5.0"
edition = "2021"
description = "Claude + Codex usage limits in the Windows 11 tray — native Win32 + Direct2D"
license = "MIT"
repository = "https://github.com/Dvaderfun/claudometer"

[build-dependencies]
winresource = "0.1"

[dependencies]
ureq = { version = "2.10", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing", "formatting", "local-offset", "macros"] }

[dependencies.windows]
version = "0.58"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Foundation_Numerics",
    "UI",
    "UI_Notifications",
    "UI_ViewManagement",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "s"
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
